// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account: index mapStateToProps with values 1`] = `
Object {
  "account": Object {
    "address": "5d04537908d44f458acb24b0f2c863ccd2bd3a13",
    "balance": "1000000000000000000000",
    "code": "",
    "codeHash": "c5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
    "contractRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "kind": "AddressStateRef",
    "latestBlockNum": 26,
    "next": "/eth/v1.2/account?address=5d04537908d44f458acb24b0f2c863ccd2bd3a13&index=18",
    "nonce": 0,
    "source": "",
  },
  "name": "name",
  "oauthAccount": Object {
    "address": "5d04537908d44f458acb24b0f2c863ccd2bd3a13",
    "balance": "1000000000000000000000",
    "code": "",
    "codeHash": "c5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
    "contractRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "kind": "AddressStateRef",
    "latestBlockNum": 26,
    "next": "/eth/v1.2/account?address=5d04537908d44f458acb24b0f2c863ccd2bd3a13&index=18",
    "nonce": 0,
    "source": "",
  },
  "selectedChain": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
}
`;

exports[`Account: index mapStateToProps without values 1`] = `
Object {
  "account": null,
  "name": null,
  "oauthAccount": null,
  "selectedChain": null,
}
`;

exports[`Account: index renders correctly (Oauth)  with empty values 1`] = `
"<div className=\\"pt-card address-margin-bottom\\">
  <div className=\\"row smd-pad-2 smd-margin-4 smd-vertical-center\\">
    <div className=\\"col-sm-10\\">
      <h4>
        Address:    
        <HexText value={[undefined]} classes=\\"smd-pad-2\\" />
      </h4>
    </div>
  </div>
  <table className=\\"pt-table pt-str\\">
    <thead>
      <tr>
        <th>
          Field
        </th>
        <th>
          Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <strong>
            Balance
          </strong>
        </td>
        <td>
          undefined wei
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Latest Block Number
          </strong>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          <strong>
            Nonce
          </strong>
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Account: index renders correctly (Oauth)  with values 1`] = `
"<div className=\\"pt-card address-margin-bottom\\">
  <div className=\\"row smd-pad-2 smd-margin-4 smd-vertical-center\\">
    <div className=\\"col-sm-10\\">
      <h4>
        Address:    
        <HexText value=\\"5d04537908d44f458acb24b0f2c863ccd2bd3a13\\" classes=\\"smd-pad-2\\" />
      </h4>
    </div>
  </div>
  <table className=\\"pt-table pt-str\\">
    <thead>
      <tr>
        <th>
          Field
        </th>
        <th>
          Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <strong>
            Balance
          </strong>
        </td>
        <td>
          1000000000000000000000 wei
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Latest Block Number
          </strong>
        </td>
        <td>
          26
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Nonce
          </strong>
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Account: index renders correctly (non-oauth) with empty values 1`] = `
"<div className=\\"pt-card address-margin-bottom\\">
  <div className=\\"row smd-pad-2 smd-margin-4 smd-vertical-center\\">
    <div className=\\"col-sm-10\\">
      <h4>
        Address:    
        <HexText value={[undefined]} classes=\\"smd-pad-2\\" />
      </h4>
    </div>
  </div>
  <table className=\\"pt-table pt-str\\">
    <thead>
      <tr>
        <th>
          Field
        </th>
        <th>
          Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <strong>
            Balance
          </strong>
        </td>
        <td>
          undefined wei
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Latest Block Number
          </strong>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          <strong>
            Nonce
          </strong>
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Account: index renders correctly (non-oauth) with values 1`] = `
"<div className=\\"pt-card address-margin-bottom\\">
  <div className=\\"row smd-pad-2 smd-margin-4 smd-vertical-center\\">
    <div className=\\"col-sm-10\\">
      <h4>
        Address:    
        <HexText value=\\"5d04537908d44f458acb24b0f2c863ccd2bd3a13\\" classes=\\"smd-pad-2\\" />
      </h4>
    </div>
  </div>
  <table className=\\"pt-table pt-str\\">
    <thead>
      <tr>
        <th>
          Field
        </th>
        <th>
          Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <strong>
            Balance
          </strong>
        </td>
        <td>
          1000000000000000000000 wei
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Latest Block Number
          </strong>
        </td>
        <td>
          26
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Nonce
          </strong>
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;
